cmake_minimum_required(VERSION 3.15)
project(template)
set(CMAKECXX_LINKE)
set(CMAKE_CXX_STANDARD 14)
add_library(test1 STATIC test1.cpp)
add_library(test2 SHARED test2.cpp)
add_library(test3 STATIC test3.cpp)
add_executable(template main.cpp)
target_link_libraries(test1 test3)
target_link_libraries(template test1 test2)